# IBM_FullStack_Dev_Django_Development

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
lab1_template/: README.md  pyproject.toml  settings.py  test.py
lab1_template/orm/: models.py
lab1_template/orm/migrations/: 0001_initial.py  0002_remove_user_date_joined_user_dob.py
lab2_template/: -- @pgsql Chat Query Editor (localhost).sql  __init__.py  main.py  pyproject.toml  read_courses.py  read_instructors.py  read_learners.py  settings.py  write.py
lab2_template/crud/: __init__.py  models.py
lab2_template/crud/migrations/: 0001_initial.py
lab3_template/: main.py  pyproject.toml  read_course_instructors.py  read_enrollments.py  settings.py  write.py
lab3_template/related_objects/: models.py
lab3_template/related_objects/migrations/: 0001_initial.py
ormtemplate/: manage.py  pyproject.toml  settings.py  test.py
ormtemplate/standalone/: models.py
ormtemplate/standalone/migrations/: 0001_initial.py
postgres/: .gitignore  docker-compose.yml
