[project]
name = "Django_App_Development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==4.2.4",
    "psycopg2-binary==2.9.7",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "lab1_template"
]
